Your past burgers will now appear to haunt you. Fatty.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,3 +5,11 @@
     {{/unless}}
   {{/each}}
 </ul>
+
+<ul>
+  {{#each burgers}}
+    {{#if devoured}}
+    <li>{{burger_name}}</li>
+    {{/if}}
+  {{/each}}
+</ul>
