--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,5 @@
+<h2>Your uneaten burgers!</h2>
+
 <ul>
   {{#each burgers}}
     {{#unless devoured}}
@@ -5,6 +7,7 @@
     {{/unless}}
   {{/each}}
 </ul>
+<h2>Your devoured burgers!</h2>
 
 <ul>
   {{#each burgers}}
@@ -13,3 +16,8 @@
     {{/if}}
   {{/each}}
 </ul>
+<form class = "create-form">
+  <label for = "burgerName">Burger:</label>
+  <input type = "text" id = "burgerName" name = "name">
+  <button type = "submit">Add burger</button>
+</form>
