Updated README and added ability to reset app

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,3 +29,6 @@
   <input type = "text" id = "burgerName" name = "name">
   <button type = "submit">Add burger</button>
 </form>
+
+
+<button class = "delete">Clear your plate</button>
