Setup to connect with profile

--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,5 +1,5 @@
 <!--List of all uneaten burgers in database-->
-<li>
+<li class = "burger-list">
     {{burger_name}}
     <button class = "devour-button" data-id = {{id}}>
         DEVOUR!
