--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,28 @@
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<a class="navbar-brand">Matthew Weston</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="index.html">
+							About
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">
+							Portfolio
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="contact.html">
+							Contact
+						</a>
+					</li>
+				</ul>
+			</div>
+        </nav>
 <header>EAT-DA-BORGER</header>
 <div class = "separator">
   <h2>Your uneaten burgers!</h2>
@@ -16,7 +41,7 @@
   <ul>
     {{#each burgers}}
       {{#if devoured}}
-      <li>{{burger_name}}</li>
+      <li class = "burger-list">{{burger_name}}</li>
       {{/if}}
     {{/each}}
   </ul>
@@ -32,3 +57,7 @@
 
 
 <button class = "delete">Clear your plate</button>
+
+       	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/		dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
