Links properly return to github profile

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,17 +6,17 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="index.html">
+						<a class="nav-link" href="https://mweston6288.github.io/index.html">
 							About
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">
+						<a class="nav-link" href="https://mweston6288.github.io/portfolio.html">
 							Portfolio
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="contact.html">
+						<a class="nav-link" href="https://mweston6288.github.io/contact.html">
 							Contact
 						</a>
 					</li>
